update 引入primeVue+tailwind css

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,16 @@
-@import './base.css';
+@layer tailwind-base, primevue, tailwind-utilities;
+
+@layer tailwind-base {
+  @tailwind base;
+}
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
+
+/* @import './base.css';
+
 
 #app {
   max-width: 1280px;
@@ -32,4 +44,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
